--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* body {
+  background: #fff !important;
+} */
+
 :root {
     --primary-- : #ff385c;
     --secondary-- : #00000036;
@@ -153,12 +157,6 @@ a{
 .rdrDateDisplayWrapper{
     display: none;
 }
-.custom-bg{
-    position: absolute;
-    background-color: rgb(0,0,0,25%);
-    width: 100%;
-    height: 100vh;
-}
 
 .transition-itr {
     /* height: 50px;  */
@@ -214,6 +212,88 @@ a{
 .custom-SubTab:hover{
     background-color: #f0f0f0;
 }
+
+/* Home Page CSS -- Start*/
+
+.fcs-15{
+    font-size: 15px;
+}
+.fcs-600{
+    font-weight: 600;
+    font-size: 15px;
+}
+
+/* Home Page CSS -- End*/
+
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 260px;
+    object-fit: cover;
+    border-radius: 12px;
+  }
+
+.swiper-button-prev:after, 
+.swiper-button-next:after {
+  background-color: white;
+  border-radius: 100%;
+  color: #000;
+  font-size: 10px !important;
+  padding: 8px 10px;
+}
+.swiper-button-prev, 
+.swiper-button-next {
+  width: 30px !important;
+  height: 30px !important;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets 
+.swiper-pagination-bullet, 
+.swiper-pagination-horizontal.swiper-pagination-bullets 
+.swiper-pagination-bullet {
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+}
+
+/* slider -1 End */
+
+.custom-bg{
+  position: absolute;
+  background-color: rgb(118 118 118 / 20%) !important;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  z-index: 30;
+}
+/* .custom-tabs-styling{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  z-index: 100;
+} */
+/* .custom-bg-Home{
+  position: relative;
+  width: 100%;
+  z-index: 20;
+} */
+
   @media (min-width: 768px){
         .custom-width-100{
             width: 95% ;
@@ -222,16 +302,19 @@ a{
             position: relative;
             right: 19%;
             width: 55%;
+            z-index: 10;
           }
           .custom-subTab1{
             position: relative;
             right: 24%;
             width: 45%;
+            z-index: 10;
           }
           .custom-tab4{
             position: relative;
             left: 22%;
             width: 50%;
+            z-index: 10;
           }
   }
   @media (min-width: 1024px){
@@ -242,15 +325,18 @@ a{
         position: relative;
         right: 18%;
         width: 38%;
+        z-index: 10;
       }
       .custom-subTab1{
         position: relative;
         right: 22%;
         width: 30%;
+        z-index: 10;
       }
       .custom-tab4{
         position: relative;
         left: 20%;
         width: 35%;
+        z-index: 10;
       }
 }
