--- a/src/App.css
+++ b/src/App.css
@@ -280,41 +280,39 @@ a{
   width: 100%;
   height: 100vh;
   left: 0;
-  z-index: 30;
 }
-/* .custom-tabs-styling{
-  position: absolute;
-  width: 100%;
-  left: 0;
-  z-index: 100;
-} */
-/* .custom-bg-Home{
-  position: relative;
-  width: 100%;
-  z-index: 20;
-} */
 
   @media (min-width: 768px){
         .custom-width-100{
-            width: 95% ;
+            width: 100% ;
         }
         .custom-tab1{
-            position: relative;
-            right: 19%;
-            width: 55%;
-            z-index: 10;
+          position: absolute;
+          width: 50%;
+          top: 144px;
+          left: 4%;
+          z-index: 2;
           }
           .custom-subTab1{
-            position: relative;
-            right: 24%;
+            position: absolute;
+            top: 144px;
+            left: 4%;
             width: 45%;
-            z-index: 10;
+            z-index: 2;
+          }
+          .custom-tab2{
+            position: absolute;
+            top: 144px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 2;
           }
           .custom-tab4{
-            position: relative;
-            left: 22%;
+            position: absolute;
+            top: 144px;
+            right: 3.5%;
             width: 50%;
-            z-index: 10;
+            z-index: 2;
           }
   }
   @media (min-width: 1024px){
@@ -322,21 +320,31 @@ a{
         width: 75%;
     }
     .custom-tab1{
-        position: relative;
-        right: 18%;
-        width: 38%;
-        z-index: 10;
+      position: absolute;
+      width: 38%;
+      top: 144px;
+      left: 14%;
+        z-index: 2;
       }
       .custom-subTab1{
-        position: relative;
-        right: 22%;
+        position: absolute;
+        top: 144px;
+        left: 14%;
         width: 30%;
-        z-index: 10;
+        z-index: 2;
+      }
+      .custom-tab2{
+        position: absolute;
+        top: 144px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 2;
       }
       .custom-tab4{
-        position: relative;
-        left: 20%;
-        width: 35%;
-        z-index: 10;
+        position: absolute;
+        top: 144px;
+        right: 13.5%;
+        width: 32%;
+        z-index: 2;
       }
 }
