--- a/src/App.css
+++ b/src/App.css
@@ -275,12 +275,86 @@ a{
 /* slider -1 End */
 
 .custom-bg{
-  position: absolute;
-  background-color: rgb(118 118 118 / 20%) !important;
+  position: relative;
+  background-color: rgb(118 118 118 / 50%) !important;
   width: 100%;
-  height: 100vh;
+  height: -webkit-fill-available;
   left: 0;
 }
+
+.custom-bg-Home{
+  position: relative;
+  z-index: -1;
+}
+
+/* Home Styling -- Start */
+
+.fcw-600{
+  font-weight: 600;
+  font-size: 14px;
+}
+.custom-pointer{
+  cursor: pointer;
+  border: none;
+}
+.nav-tabs .nav-link.popular-Active{
+  border-radius: 0px !important;
+  box-shadow: none !important;
+  color: #000;
+  border-bottom: 1.5px solid #000 !important;
+}
+.nav-tabs .nav-link.popular-Active:hover,
+.nav-tabs .nav-link.popular-Active:active,
+.nav-tabs .nav-link.popular-Active:focus
+{
+  border-bottom: 1.5px solid #000 !important;
+}
+.fcs-7{
+  font-size: 14px;
+}
+.f-sb-style:hover,
+.f-sb-style:active,
+.f-sb-style:focus
+{
+  border-bottom: 1.5px solid #515151;
+}
+.f-sbt-style{
+  border-bottom: 1.5px solid #515151;
+}
+.fcw-600{
+  font-size: 14px;
+  font-weight: 600;
+}
+/* Mobile Navbar -- Start */
+.custom-MobileNav-styling{
+  position: absolute;
+  left: 0;
+  width: 15% !important;
+  top: 15px;
+
+}
+.nav-tabs .nav-link.Mobile.popular-Active{
+  color: #000 !important;
+}
+.brd-radius{
+  border-radius: 15px;
+}
+.mobile-navbar-sticky{
+  position: sticky;
+  top: 0;
+  box-shadow: var(--box-shadow--);
+  z-index: 20;
+}
+.MobileDate-wrapping .rdrMonths {
+  display: flex !important;
+}
+.fcw-500{
+  font-size: 13px;
+  font-weight: 600;
+}
+/* Mobile Navbar -- End */
+
+/* Home Styling -- End */
 
   @media (min-width: 768px){
         .custom-width-100{
